Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1657

[C++] Multithreaded Read Test Failing on Arch Linux

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.8.0
    • C++

    Description

      This is appearing in parquet-cpp, but is caused by a recent change in arrow to privatize the use of std::mutex so I'm opening the JIRA here.

      This doesn't show up in CI, but shows up reliably on my personal Arch Linux installation.

      Attachments

        Issue Links

          Activity

            People

              cpcloud Phillip Cloud
              cpcloud Phillip Cloud
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: