ARROW-1657: [C++] Multithreaded Read Test Failing on Arch Linux